fix cursor flicker on list hover

--- a/app/client/src/sass/list.sass
+++ b/app/client/src/sass/list.sass
@@ -50,8 +50,7 @@
     font-size: 14px
     .ql-editor
       p
-        &:hover
-          cursor: pointer
+        cursor: pointer
       padding: 0
       line-height: normal
 
